# nixpkgs-check

./: .gitignore  Cargo.toml  LICENSE  README.md  common.nix  default.nix  package.nix  shell.nix
src/: lib.rs  main.rs
src/checks/: ask_other_tests.rs  ask_pkg_names.rs  build.rs  closure_size.rs  confirm_contributing.rs  environment.rs  mod.rs  run_binaries.rs  run_tests.rs  self_version.rs
