[package]
name = "nixpkgs-check"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
bytesize = "1.0"
dialoguer = "0.8.0"
git2 = "0.13.17"
os_type = "2.2"
serde_json = "1.0"
structopt = "0.3.21"
tempfile = "3.2"
uuid = { version = "0.8.2", features = ["v4"] }
